
* Category sorting has been improved. 
** Sorting is now case insensitive.
** Sub-categories, pages and files can now be paged separately.
** When several pages are given the same sort key, they sort by their 
   names instead of randomly.

* The lowest supported version of PHP is now 5.2.3. If necessary, please
  upgrade PHP prior to upgrading MediaWiki.

=== Configuration changes in 1.17 ===

* $wgLogAutocreatedAccounts controls whether autocreation of accounts is logged
  to new users log.
* (bug 22858) $wgLocalStylePath is by default set to the same value as
  $wgStylePath but should never point to a different domain than the site is
  on, allowing skins to use .htc files which are not cross-domain friendly.
* $wgFileStore has been deprecated. The only usage $wgFileStore['deleted'] has
  been turned into $wgDeletedDirectory.
* $wgDeletedDirectory has been added to specify what directory to place deleted
  uploads in.
* IBM DB2 database no longer uses the db specific $wgDBport_db2 variable but the
  normal $wgDBport.
* $wgCategoryPrefixedDefaultSortkey was removed and is now always false.  This
  provides more sensible sorting behavior for categories.
* Removed unused globals: $wgEnableSerializedMessages, $wgCheckSerialized,
  $wgUseMemCached, $wgDisableSearchContext, $wgColorErrors, $wgUseZhdaemon,
  $wgZhdaemonHost and $wgZhdaemonPort.
* (bug 24408) The include_path is not modified in the default LocalSettings.php
* $wgVectorExtraStyles was removed, and is no longer in use.
* Removed $wgUpdates for database updates; extensions should use
  DatabaseUpdater::addExtensionUpdate() via the LoadExtensionSchemaUpdates hook.
* Removed $wgServerName. It doesn't need to be set anymore and is no longer
  available as input for other configuration items, either.
* It's no longer necessary for LocalSettings.php to include DefaultSettings.php.
* It's no longer necessary to set $wgCacheEpoch to the file modification time