@@ -37,13 +37,6 @@ if ( $wgImgAuthPublicTest
 	wfForbidden('img-auth-accessdenied','img-auth-public');
 }
 
-// Check for bug 28235: QUERY_STRING overriding the correct extension
-if ( isset( $_SERVER['QUERY_STRING'] )
-	&& preg_match( '/\.[^\\/:*?"<>|%]+(#|\?|$)/i', $_SERVER['QUERY_STRING'] ) )
-{
-	wfForbidden( 'img-auth-accessdenied', 'img-auth-bad-query-string' );
-}
-
 // Extract path and image information
 if( !isset( $_SERVER['PATH_INFO'] ) ) {
 	$path = $wgRequest->getText( 'path' );
@@ -53,6 +46,17 @@ if( !isset( $_SERVER['PATH_INFO'] ) ) {
 	$path = "/$path";
 } else {
 	$path = $_SERVER['PATH_INFO'];
+}
+
+// Check for bug 28235: QUERY_STRING overriding the correct extension
+$dotPos = strpos( $path, '.' );
+$whitelist = array();
+if ( $dotPos !== false ) {
+	$whitelist[] = substr( $path, $dotPos + 1 );
+}
+if ( !$wgRequest->checkUrlExtension( $whitelist ) )
+{
+	return;
 }
 
 $filename = realpath( $wgUploadDirectory . $path );
